[movies] migration: Migrate to gradle kotlin dsl - android plugin
Note that the migration is not complete on this plugin since the
android.gradle and lint.gradle files are still used through the
apply(...) mechanism.

The apply cannot be replaced with the actual android.gradle and
lint.gradle logic since there are two distinct plugins for android, one
for the "data" module, through the android library plugin, and the
other one for the "presentation" module, through the android
application plugin.

--- a/config/gradle/quality/lint.gradle
+++ b/config/gradle/quality/lint.gradle
@@ -1,5 +1,4 @@
 android {
-
     lintOptions {
         abortOnError = true
         checkAllWarnings = true
@@ -9,7 +8,6 @@ android {
         lintConfig(file(Config.LINT_CONFIG_FILE_PATH))
         htmlReport = true
         xmlReport = true
-        disable(Config.lintListOfDisabledIssues)
+        disable(Config.lintDisabledIssues)
     }
-
 }
