[movies] detekt: Exclude class pattern for constructor parameter naming
For all api client response related classes, those that have a "Raw"
suffix, an detekt exception for "ConstructorParameterNaming" was added,
since this the expected behavior that we want.

--- a/config/quality/detekt.yml
+++ b/config/quality/detekt.yml
@@ -298,7 +298,7 @@ naming:
     active: true
     parameterPattern: '[a-z][A-Za-z0-9]*'
     privateParameterPattern: '[a-z][A-Za-z0-9]*'
-    excludeClassPattern: '$^'
+    excludeClassPattern: '.*Raw'
   EnumNaming:
     active: true
     enumEntryPattern: '^[A-Z][_a-zA-Z0-9]*'
