--- a/config/quality/detekt.yml
+++ b/config/quality/detekt.yml
@@ -2,10 +2,10 @@ build:
   maxIssues: 0
   excludeCorrectable: false
   weights:
-    # complexity: 2
-    # LongParameterList: 1
-    # style: 1
-    # comments: 1
+    complexity: 2
+    LongParameterList: 1
+    style: 1
+    comments: 1
 
 config:
   validation: true
