[movies] analysis: Activate new detekt naming related rules

--- a/config/quality/detekt.yml
+++ b/config/quality/detekt.yml
@@ -311,7 +311,7 @@ naming:
     excludes: "**/test/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt"
     enumEntryPattern: '^[A-Z][_a-zA-Z0-9]*'
   ForbiddenClassName:
-    active: false
+    active: true
     excludes: "**/test/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt"
     forbiddenName: ''
   FunctionMaxLength:
@@ -335,7 +335,7 @@ naming:
     excludeClassPattern: '$^'
     ignoreOverriddenFunctions: true
   InvalidPackageDeclaration:
-    active: false
+    active: true
     rootPackage: ''
   MatchingDeclarationName:
     active: true
