[movies] analysis: Activate data class immutable detekt style rule

--- a/config/quality/detekt.yml
+++ b/config/quality/detekt.yml
@@ -441,7 +441,7 @@ style:
     active: true
     conversionFunctionPrefix: 'to'
   DataClassShouldBeImmutable:
-    active: false
+    active: true
   EqualsNullCall:
     active: true
   EqualsOnSignatureLine:
