--- a/config/quality/detekt.yml
+++ b/config/quality/detekt.yml
@@ -576,7 +576,7 @@ style:
     excludeAnnotatedClasses: ""
     allowVars: false
   UseIfInsteadOfWhen:
-    active: false
+    active: true
   UseRequire:
     active: true
   UselessCallOnNotNull:
