[movies] refactor: Extract pure network module from android data module
Also, as part of this change the below occurred:
- New TODO comments that refer to future improvements
  (android-utils and utils module creation).
- Improved Koin module configuration
  (presentation, data and domain module configuration).
- Android BuildConfig utilisation removal from network specific classes
  (NetworkModule and RestApi classes).

--- a/config/quality/detekt.yml
+++ b/config/quality/detekt.yml
@@ -454,7 +454,7 @@ style:
   ForbiddenComment:
     active: true
     values: 'TODO:,FIXME:,STOPSHIP:'
-    allowedPatterns: ""
+    allowedPatterns: "TODO:"
   ForbiddenImport:
     active: true
     imports: ''
