[movies] analysis: Clean excludes pattern for lateinit usage for detekt
Lateinit should now be avoided from everywhere without exception, main
and test code included.

--- a/config/quality/detekt.yml
+++ b/config/quality/detekt.yml
@@ -431,7 +431,7 @@ potential-bugs:
     active: true
   LateinitUsage:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: ''
     excludeAnnotatedProperties: ''
     ignoreOnClassesPattern: ''
   MapGetWithNotNullAssertionOperator:
