[movies] analysis: Remove todo in allowed patterns on forbidden comments

--- a/config/quality/detekt.yml
+++ b/config/quality/detekt.yml
@@ -476,7 +476,7 @@ style:
   ForbiddenComment:
     active: true
     values: 'TODO:,FIXME:,STOPSHIP:'
-    allowedPatterns: 'TODO:'
+    allowedPatterns: ''
   ForbiddenImport:
     active: true
     imports: ''
