--- a/config/quality/detekt.yml
+++ b/config/quality/detekt.yml
@@ -33,7 +33,7 @@ console-reports:
 
 comments:
   active: true
-  excludes: '**/test/**,**/spekTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+  excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
   AbsentOrWrongFileLicense:
     active: false
     licenseTemplateFile: 'license.template'
@@ -95,14 +95,14 @@ complexity:
     threshold: 4
   StringLiteralDuplication:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
     threshold: 3
     ignoreAnnotation: true
     excludeStringsWithLessThan5Characters: true
     ignoreStringsRegex: '$^'
   TooManyFunctions:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
     thresholdInFiles: 11
     thresholdInClasses: 11
     thresholdInInterfaces: 11
@@ -161,7 +161,7 @@ exceptions:
     methodNames: 'toString,hashCode,equals,finalize'
   InstanceOfCheckForException:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
   NotImplementedDeclaration:
     active: true
   PrintStackTrace:
@@ -186,7 +186,7 @@ exceptions:
     active: true
   TooGenericExceptionCaught:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
     exceptionNames:
      - ArrayIndexOutOfBoundsException
      - Error
@@ -318,40 +318,40 @@ naming:
   active: true
   ClassNaming:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
     classPattern: '[A-Z$][a-zA-Z0-9$]*'
   ConstructorParameterNaming:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
     parameterPattern: '[a-z][A-Za-z0-9]*'
     privateParameterPattern: '[a-z][A-Za-z0-9]*'
     excludeClassPattern: '.*Raw'
     ignoreOverridden: true
   EnumNaming:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
     enumEntryPattern: '^[A-Z][_a-zA-Z0-9]*'
   ForbiddenClassName:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
     forbiddenName: ''
   FunctionMaxLength:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
     maximumFunctionNameLength: 30
   FunctionMinLength:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
     minimumFunctionNameLength: 3
   FunctionNaming:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
     functionPattern: '^([a-z$][a-zA-Z$0-9]*)|(`.*`)$'
     excludeClassPattern: '$^'
     ignoreOverridden: true
   FunctionParameterNaming:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
     parameterPattern: '[a-z][A-Za-z0-9]*'
     excludeClassPattern: '$^'
     ignoreOverridden: true
@@ -366,31 +366,31 @@ naming:
     ignoreOverridden: true
   ObjectPropertyNaming:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
     constantPattern: '[A-Za-z][_A-Za-z0-9]*'
     propertyPattern: '[A-Za-z][_A-Za-z0-9]*'
     privatePropertyPattern: '(_)?[A-Za-z][_A-Za-z0-9]*'
   PackageNaming:
     active: false
-    excludes: '**/test/**,**/spekTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
     packagePattern: '^[a-z]+(\.[a-z][A-Za-z0-9]*)*$'
   TopLevelPropertyNaming:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
     constantPattern: '[A-Z][_A-Z0-9]*'
     propertyPattern: '[A-Za-z][_A-Za-z0-9]*'
     privatePropertyPattern: '_?[A-Za-z][_A-Za-z0-9]*'
   VariableMaxLength:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
     maximumVariableNameLength: 64
   VariableMinLength:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
     minimumVariableNameLength: 1
   VariableNaming:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
     variablePattern: '[a-z][A-Za-z0-9]*'
     privateVariablePattern: '(_)?[a-z][A-Za-z0-9]*'
     excludeClassPattern: '$^'
@@ -402,10 +402,10 @@ performance:
     active: true
   ForEachOnRange:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
   SpreadOperator:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
   UnnecessaryTemporaryInstantiation:
     active: true
 
@@ -505,7 +505,7 @@ style:
     maxJumpCount: 1
   MagicNumber:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
     ignoreNumbers: '-1,0,1,2'
     ignoreHashCodeFunction: true
     ignorePropertyDeclaration: false
@@ -611,5 +611,5 @@ style:
     active: true
   WildcardImport:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
     excludeImports: 'java.util.*,kotlinx.android.synthetic.*'
