--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # JVM arguments
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx8g -Xms2g
+org.gradle.jvmargs=-Xms2g -Xmx8g
 # Parallel Builds
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
