[movies] build: Set max workers to 4 for parallel build
This is done in order to make sure that the machine running the build
doesn't absorb all machine's resources while running a build.

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@ org.gradle.jvmargs=-Xms2g -Xmx8g -XX:+HeapDumpOnOutOfMemoryError
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 org.gradle.parallel=true
+org.gradle.workers.max=4
 # Caching
 # For more details on how to configure caching visit
 # https://blog.jetbrains.com/kotlin/2018/02/using-gradle-build-cache-with-kotlin
