[movies-25] feature: Change navigation to deep link based navigation
This change produces the below benefits:
1) Only one navigation graph, the 'app_navigation' graph,
2) The 'movie' module doesn't need to know about the 'movie-details'
module, and
3) This effectively enables the project for future dynamic modules.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <nav-graph android:value="@navigation/app_navigation" />
         </activity>
 
     </application>
