--- a/android-test/src/main/AndroidManifest.xml
+++ b/android-test/src/main/AndroidManifest.xml
@@ -1,1 +1,3 @@
-<manifest package="io.petros.movies.android_test" />
+<?xml version="1.0" encoding="utf-8"?>
+
+<manifest package="io.petros.movies.android.test" />
