--- a/android-utils/src/main/AndroidManifest.xml
+++ b/android-utils/src/main/AndroidManifest.xml
@@ -1,3 +1,3 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<manifest package="io.petros.movies.android_utils" />
+<manifest package="io.petros.movies.android.utils" />
