--- a/feature/movie-details/src/main/AndroidManifest.xml
+++ b/feature/movie-details/src/main/AndroidManifest.xml
@@ -1,1 +1,3 @@
-<manifest package="io.petros.movies.movie_details" />
+<?xml version="1.0" encoding="utf-8"?>
+
+<manifest package="io.petros.movies.feature.movie.details" />
