--- a/feature/picker/src/main/AndroidManifest.xml
+++ b/feature/picker/src/main/AndroidManifest.xml
@@ -1,1 +1,3 @@
-<manifest package="io.petros.movies.picker" />
+<?xml version="1.0" encoding="utf-8"?>
+
+<manifest package="io.petros.movies.feature.picker" />
