[movies] update: Update gradle to release candidate 6.5-rc-1 version
Command: gradlew wrapper --gradle-version=6.5-rc-1

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-# Released: 15-05-20
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.4.1-all.zip
+# Released: 26-05-20
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-rc-1-all.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
