[movies] build: Make build console output verbose by default

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,5 @@ android.enableBuildCache=true
 # https://developer.android.com/jetpack/androidx
 android.useAndroidX=true
 android.enableJetifier=true
+# Console arguments
+org.gradle.console=verbose
