[movies] build: Disable most dependency analysis console output

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Console arguments
 org.gradle.console=verbose
+# Dependency analysis
+dependency.analysis.silent=true
