[movies] docs: Add description to android enable jetifier property

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,7 @@ android.enableBuildCache=true
 # For more details about how to configure AndroidX visit
 # https://developer.android.com/jetpack/androidx
 android.useAndroidX=true
+# Automatically convert third-party libraries to use AndroidX.
 android.enableJetifier=true
 # Console arguments
 org.gradle.console=verbose
