[movies] docs: Capitalize title descriptions within gradle properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,7 +19,7 @@ android.enableBuildCache=true
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX.
 android.enableJetifier=true
-# Console arguments
+# Console Arguments
 org.gradle.console=verbose
-# Dependency analysis
+# Dependency Analysis
 dependency.analysis.silent=true
