--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-# Released: 30-06-20
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.5.1-all.zip
+# Released: 24-07-20
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.6-rc-3-all.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
