--- a/config/quality/detekt.yml
+++ b/config/quality/detekt.yml
@@ -10,6 +10,7 @@ build:
 
 config:
   validation: true
+  warningsAsErrors: true
   # when writing own rules with new properties, exclude the property path e.g.: 'my_rule_set,.*>.*>[my_property]'
   excludes: ''
 
